--- a/contactus.html
+++ b/contactus.html
@@ -169,7 +169,7 @@
                             <div class="col-xl-6">
                                 <div class="d-flex">
                                     <div class="bg-light d-flex align-items-center justify-content-center" style="width: 60px; height: 60px; border-radius: 10px;">
-                                        <i class="fas fa-tty fa-2x text-primary"></i>
+                                        <i class="fas fa-phone-alt fa-2x text-primary"></i>
                                     </div>
                                     <div class="ps-3">
                                         <h5 class="mb-3">Quick Contact</h5>
@@ -187,7 +187,7 @@
                             <div class="col-xl-6">
                                 <div class="d-flex">
                                     <div class="bg-light d-flex align-items-center justify-content-center" style="width: 60px; height: 60px; border-radius: 10px;">
-                                        <i class="fas fa-clone fa-2x text-primary" style="font-size: 26px;"></i>
+                                        <i class="fas fa-clock fa-2x text-primary" style="font-size: 30px;"></i>
                                     </div>
                                     <div class="ps-3">
                                         <h5 class="mb-3">Office Hours</h5>
@@ -212,7 +212,7 @@
                             <div class="d-flex">
                                 <a class="btn me-3 p-0 facbookColor" href="#">
                                     LinkedIn 
-                                    <i class="fab fa-facebook-square fa-2x align-middle"></i>
+                                    <i class="fab fa-linkedin fa-2x align-middle"></i>
                                 </a>
                                 <a class="btn mx-3 p-0 instagramColor" href="#">
                                     Instagram 
@@ -277,100 +277,127 @@
         <!-- Contact End -->
 
         <!-- Footer Start -->
-    <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay="0.2s">
-        <div class="container py-5">
-            <div class="row g-5">
-                <div class="col-md-6 col-lg-7 col-xl-4">
-                    <div class="footer-item d-flex flex-column">
-                        <h4 class="text-secondary mb-4">Contact Info</h4>
-                        <a href=""><i class="fa fa-map-marker-alt me-2"></i>C-131, 1st Floor Lajpat Nagar <br /> New Delhi - 110024</a>
-                        <a href=""><i class="fas fa-envelope me-2"></i> lexworkss@gmail.com</a>
-                        <!-- <a href=""><i class="fas fa-phone me-2"></i> +012 345 67890</a> -->
-                        <a href="" class="mb-3"><i class="fas fa-print me-2"></i> 011-41540229</a>
-                        <div class="d-flex align-items-center">
-                            <i class="fas fa-share fa-2x text-secondary me-2"></i>
-                            <a class="btn mx-1 linkedInHover" href="#"><i class="fab fa-2x fa-linkedin-in"></i></a>
-                            <a class="btn mx-1 instagramHover" href="#"><i class="fab fa-2x fa-instagram"></i></a>
-                            <a class="btn mx-1 youtubeHover" href="#"><i class="fab fa-2x fa-youtube"></i></a>
+        <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay="0.2s">
+            <div class="container py-5">
+                <div class="row g-5">
+                    <div class="col-md-6 col-lg-6 col-xl-3">
+                        <div class="footer-item d-flex flex-column">
+                            <h4 class="text-secondary mb-4">Contact Info</h4>
+                            <a href="javascript:void(0);" class="alignContent">
+                                <i class="fa fa-map-marker-alt me-2"></i>
+                                <span class="contentLine">C-131, 1st Floor Lajpat Nagar <br />New Delhi - 110024</span>
+                            </a>
+                            <a href="mailto:lexworkss@gmail.com" class="alignContent">
+                                <i class="fas fa-envelope me-2"></i>
+                                <span class="contentLine">lexworkss@gmail.com</span>
+                            </a>
+                            <!-- <a href=""><i class="fas fa-phone me-2"></i> +012 345 67890</a> -->
+                            <a href="tel:98xxxxxxxx00" class="alignContent">
+                                <i class="fab fa-whatsapp me-2"></i> 
+                                <span class="contentLine">+91 98xxxxxxxx00</span>
+                            </a>
+                            <a href="tel:011-41540229" class="alignContent mb-3">
+                                <i class="fas fa-phone-square-alt me-2"></i>
+                                <span class="contentLine">011-41540229</span>
+                            </a>
+                            <div class="d-flex align-items-center">
+                                <i class="fas fa-share fa-2x text-secondary me-2"></i>
+                                <a class="btn mx-1 linkedInHover" href="#"><i class="fab fa-2x fa-linkedin-in"></i></a>
+                                <a class="btn mx-1 instagramHover" href="#"><i class="fab fa-2x fa-instagram"></i></a>
+                                <a class="btn mx-1 youtubeHover" href="#"><i class="fab fa-2x fa-youtube"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-6 col-xl-2">
+                        <div class="footer-item d-flex flex-column">
+                            <h4 class="text-secondary mb-4">Office Hours</h4>
+                            <div class="mb-3">
+                                <h6 class="text-muted mb-0">Monday - Friday:</h6>
+                                <p class="text-white mb-0">10.00 am to 07.00 pm</p>
+                            </div>
+                            <div class="mb-3">
+                                <h6 class="text-muted mb-0">WeekEnds:</h6>
+                                <p class="text-white mb-0">12.00 pm to 05.00 pm</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-6 col-xl-3">
+                        <div class="footer-item d-flex flex-column">
+                            <h4 class="text-secondary mb-4">Proficiencies</h4>
+                            <a href="#" class="alignContent">
+                                <i class="fas fa-angle-right me-2"></i>
+                                <span class="contentLine">Litigation &amp; dispute redressals</span>
+                            </a>
+                            <a href="#" class="alignContent">
+                                <i class="fas fa-angle-right me-2"></i> 
+                                <span class="contentLine">Offering business formation, (compliance &amp; Contracts)</span>
+                            </a>
+                            <a href="#" class="alignContent">
+                                <i class="fas fa-angle-right me-2"></i> 
+                                <span class="contentLine">Resolution facilities &amp; ADR</span>
+                            </a>
+                            <a href="#" class="alignContent">
+                                <i class="fas fa-angle-right me-2"></i> 
+                                <span class="contentLine">Tax Laws &amp; Compliance</span>
+                            </a>
+                            <a href="#" class="alignContent">
+                                <i class="fas fa-angle-right me-2"></i> 
+                                <span class="contentLine">Brand Protection (IPR)</span>
+                            </a>
+                            <!-- <a href="#" class=""><i class="fas fa-angle-right me-2"></i> Work / Career</a> -->
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-6 col-xl-4">
+                        <div class="footer-item">
+                            <h4 class="text-secondary mb-4">Newsletter</h4>
+                            <p class="text-white mb-3">
+                                <span  class="contentLine">Dolor amet sit justo amet elitr clita ipsum elitr est.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                            </p>
+                            <div class="position-relative mx-auto rounded-pill">
+                                <input class="form-control border-0 rounded-pill w-100 py-3 ps-4 pe-5" type="text" placeholder="Enter your email">
+                                <button type="button" class="btn btn-primary rounded-pill position-absolute top-0 end-0 py-2 mt-2 me-2">SignUp</button>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-5 col-xl-3">
-                    <div class="footer-item d-flex flex-column">
-                        <h4 class="text-secondary mb-4">Office Hours</h4>
-                        <div class="mb-3">
-                            <h6 class="text-muted mb-0">Monday - Friday:</h6>
-                            <p class="text-white mb-0">10.00 am to 07.00 pm</p>
-                        </div>
-                        <div class="mb-3">
-                            <h6 class="text-muted mb-0">WeekEnds:</h6>
-                            <p class="text-white mb-0">12.00 pm to 05.00 pm</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-12 col-xl-5">
-                    <div class="footer-item d-flex flex-column">
-                        <h4 class="text-secondary mb-4">Proficiencies</h4>
-                        <a href="#" class=""><i class="fas fa-angle-right me-2"></i> Litigation &amp; dispute redressals</a>
-                        <a href="#" class=""><i class="fas fa-angle-right me-2"></i> Offering business formation, compliance &amp; Contracts</a>
-                        <a href="#" class=""><i class="fas fa-angle-right me-2"></i> Resolution facilities &amp; ADR</a>
-                        <a href="#" class=""><i class="fas fa-angle-right me-2"></i> Tax Laws &amp; Compliance</a>
-                        <a href="#" class=""><i class="fas fa-angle-right me-2"></i> Brand Protection (IPR)</a>
-                        <!-- <a href="#" class=""><i class="fas fa-angle-right me-2"></i> Work / Career</a> -->
-                    </div>
-                </div>
-                <!-- <div class="col-md-6 col-lg-6 col-xl-3">
-                    <div class="footer-item">
-                        <h4 class="text-secondary mb-4">Newsletter</h4>
-                        <p class="text-white mb-3">Dolor amet sit justo amet elitr clita ipsum elitr est.Lorem ipsum
-                            dolor sit amet, consectetur adipiscing elit.</p>
-                        <div class="position-relative mx-auto rounded-pill">
-                            <input class="form-control border-0 rounded-pill w-100 py-3 ps-4 pe-5" type="text"
-                                placeholder="Enter your email">
-                            <button type="button"
-                                class="btn btn-primary rounded-pill position-absolute top-0 end-0 py-2 mt-2 me-2">SignUp</button>
-                        </div>
-                    </div>
-                </div> -->
             </div>
         </div>
-    </div>
-    <!-- Footer End -->
+        <!-- Footer End -->
 
 
-    <!-- Copyright Start -->
-    <div class="container-fluid copyright py-4">
-        <div class="container">
-            <div class="row g-4 align-items-center">
-                <div class="col-md-6 text-center text-md-start mb-md-0">
-                    <span class="text-primary"><a href="https://lexworks.co.in/" class="border-bottom text-primary"><i lass="fas fa-copyright me-2"></i>www.lexworks.co.in</a>, All right reserved.</span>
-                </div>
-                <div class="col-md-6 text-center text-md-end text-primary">
-                    Designed & Develped By <a class="border-bottom text-primary"
-                        href="https://muhdanees.github.io/codeplayer/">Mohd Anees</a>.
+        <!-- Copyright Start -->
+        <div class="container-fluid copyright py-4">
+            <div class="container">
+                <div class="row g-4 align-items-center">
+                    <div class="col-md-6 text-center text-md-start mb-md-0">
+                        <span class="text-primary"><a href="https://lexworks.co.in/" class="border-bottom text-primary"><i lass="fas fa-copyright me-2"></i>www.lexworks.co.in</a>, All right reserved.</span>
+                    </div>
+                    <div class="col-md-6 text-center text-md-end text-primary">
+                        Designed & Develped By <a class="border-bottom text-primary"
+                            href="https://muhdanees.github.io/codeplayer/">Mohd Anees</a>.
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- Copyright End -->
+        <!-- Copyright End -->
 
 
-    <!-- Back to Top -->
-    <a href="#" class="btn btn-primary btn-lg-square back-to-top"><i class="fa fa-arrow-up"></i></a>
+        <!-- Back to Top -->
+        <a href="#" class="btn btn-primary btn-lg-square back-to-top"><i class="fa fa-arrow-up"></i></a>
 
 
-    <!-- JavaScript Libraries -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/wow/wow.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/counterup/counterup.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+        <!-- JavaScript Libraries -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="lib/wow/wow.min.js"></script>
+        <script src="lib/easing/easing.min.js"></script>
+        <script src="lib/waypoints/waypoints.min.js"></script>
+        <script src="lib/counterup/counterup.min.js"></script>
+        <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
 
-    <!-- Template Javascript -->
-    <script src="js/main.js"></script>
-</body>
+        <!-- Template Javascript -->
+        <script src="js/main.js"></script>
+    </body>
 
 </html>
