--- a/aboutus.html
+++ b/aboutus.html
@@ -105,8 +105,8 @@
                                         <div class="py-2 cPx-3 text-dark text-inline"><strong>Other Areas</strong></div>
                                             <a href="#" class="dropdown-item">Arbitration</a>
                                             <a href="#" class="dropdown-item">Banking & Finance</a>
-                                            <a href="#" class="dropdown-item">Corporate</a>
-                                            <a href="#" class="dropdown-item">Cervical & Civil Citation</a>
+                                            <a href="#" class="dropdown-item">Corporate Law</a>
+                                            <a href="#" class="dropdown-item">Criminal of Civil Litigation</a>
                                             <a href="#" class="dropdown-item">Cyber Law</a>
                                             <a href="#" class="dropdown-item">
                                                 <div class="menuItem">
