--- a/ourteam.html
+++ b/ourteam.html
@@ -90,8 +90,9 @@
                         <a href="aboutus.html" class="nav-item nav-link">About Us</a>
                         <a href="ourteam.html" class="nav-item nav-link active">Our Team</a>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link" data-bs-toggle="dropdown"><span class="dropdown-toggle">Practice
-                                    Area</span></a>
+                            <a href="#" class="nav-link" data-bs-toggle="dropdown">
+                                <span class="dropdown-toggle">Practice Area</span>
+                            </a>
                             <div class="dropdown-menu m-0">
                                 <div class="d-flex">
                                     <div class="py-1 px-2">
