--- a/index.html
+++ b/index.html
@@ -195,18 +195,20 @@
     <!-- Carousel Start -->
     <div class="carousel-header">
       <div id="carouselId" class="carousel slide" data-bs-ride="carousel">
+
         <ol class="carousel-indicators">
-          <li
-            data-bs-target="#carouselId"
-            data-bs-slide-to="0"
-            class="active"
-          ></li>
+          <li data-bs-target="#carouselId" data-bs-slide-to="0" class="active"></li>
           <li data-bs-target="#carouselId" data-bs-slide-to="1"></li>
+          <li data-bs-target="#carouselId" data-bs-slide-to="2"></li>
+          <li data-bs-target="#carouselId" data-bs-slide-to="3"></li>
+          <li data-bs-target="#carouselId" data-bs-slide-to="4"></li>
         </ol>
+
         <div class="carousel-inner" role="listbox">
+
           <div class="carousel-item active">
-            <img src="img/carousel-1.jpg" class="img-fluid" alt="Image" />
-            <div class="carousel-caption">
+            <img src="img/carousel-1.png" class="img-fluid" alt="Image" />
+            <!-- <div class="carousel-caption">
               <div class="text-center p-4" style="max-width: 900px">
                 <h4
                   class="text-white text-uppercase fw-bold mb-3 mb-md-4 wow fadeInUp"
@@ -235,11 +237,12 @@
                   >More Details</a
                 >
               </div>
-            </div>
+            </div> -->
           </div>
+
           <div class="carousel-item">
-            <img src="img/carousel-2.jpg" class="img-fluid" alt="Image" />
-            <div class="carousel-caption">
+            <img src="img/carousel-2.png" class="img-fluid" alt="Image" />
+            <!-- <div class="carousel-caption">
               <div class="text-center p-4" style="max-width: 900px">
                 <h5
                   class="text-white text-uppercase fw-bold mb-3 mb-md-4 wow fadeInUp"
@@ -268,9 +271,20 @@
                   >More Details</a
                 >
               </div>
-            </div>
+            </div> -->
           </div>
+          <div class="carousel-item">
+            <img src="img/carousel-3.png" class="img-fluid" alt="Image" />
+          </div>
+          <div class="carousel-item">
+            <img src="img/carousel-4.png" class="img-fluid" alt="Image" />
+          </div>
+          <div class="carousel-item">
+            <img src="img/carousel-5.png" class="img-fluid" alt="Image" />
+          </div>
+
         </div>
+
         <button
           class="carousel-control-prev"
           type="button"
@@ -284,6 +298,7 @@
           ></span>
           <span class="visually-hidden-focusable">Previous</span>
         </button>
+
         <button
           class="carousel-control-next"
           type="button"
@@ -297,6 +312,7 @@
           ></span>
           <span class="visually-hidden-focusable">Next</span>
         </button>
+
       </div>
     </div>
     <!-- Carousel End -->
