--- a/direct-tax.html
+++ b/direct-tax.html
@@ -159,12 +159,12 @@
         <!-- About Start -->
         <div class="container-fluid py-sm-0 py-5">
             <div class="container py-5">
-                <div class="row g-5">
+                <div class="row g-5 watermark">
                     <div class="col-xl-4 wow fadeInLeft" data-wow-delay="0.1s">
                         <div class="bg-light rounded">
-                            <img src="img/about-2.png" class="img-fluid w-100" style="margin-bottom: -7px;" alt="Image">
-                            <img src="img/about-3.jpg" class="img-fluid w-100 border-bottom border-5 border-primary"
-                                style="border-top-right-radius: 300px; border-top-left-radius: 300px;" alt="Image">
+                            <img src="img/directTax.png" class="img-fluid w-100" style="margin-bottom: -7px;" alt="Image" />
+                            <!-- <img src="img/about-3.jpg" class="img-fluid w-100 border-bottom border-5 border-primary"
+                                style="border-top-right-radius: 300px; border-top-left-radius: 300px;" alt="Image"> -->
                         </div>
                     </div>
                     <div class="col-xl-8 wow fadeInRight" data-wow-delay="0.3s">
